fix(backend): various features, fixes and db migration
- Updated README files for AI server and backend
- Added V2__allergen_collection.sql database migration
- Implemented fixes and mapper updates for User module
- Refactored logic in Cart, Purchase, and Streak services
- Updated NotificationScheduler and RateLimitFilter configurations